add public directory

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 postgres-data/
-public/
+# public/
 
 # Go workspace file
 go.work
